--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -80,6 +80,11 @@ div:focus {
 }
 
 // main-container global css
+.app-header {
+  padding: 20px;
+  background-color: #fff;
+}
+
 .app-container {
   padding: 20px;
   margin: 24px;
