--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import './transition.scss';
 @import './element-ui.scss';
 @import './sidebar.scss';
+@import './tap.scss';
 
 body {
   height: 100%;
@@ -13,7 +14,7 @@ body {
 }
 
 label {
-  font-weight: 400;
+  font-weight: 500;
 }
 
 html {
