--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -10,7 +10,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
 
 label {
@@ -131,11 +131,16 @@ div:focus {
 }
 
 .error-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
   background: #fff;
-  padding-top: 100px;
-  text-align: center;
+
+  .cont {
+    text-align: center;
+  }
 
   .title {
     color: #434e59;
