--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -89,6 +89,32 @@ div:focus {
   overflow: hidden;
 }
 
+.ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.multi-ellipsis--l2 {
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+
+  /* autoprefixer: ignore next */
+  -webkit-box-orient: vertical;
+}
+
+.multi-ellipsis--l3 {
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+
+  /* autoprefixer: ignore next */
+  -webkit-box-orient: vertical;
+}
+
 // main-container global css
 .app-header {
   padding: 20px;
