--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -4,13 +4,17 @@
 @import 'element-ui';
 @import 'sidebar';
 @import 'tap';
+@import 'hljs';
 
 body {
   height: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
+  'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+  'Noto Color Emoji';
+  line-height: 1.5715;
 }
 
 label {
@@ -184,19 +188,23 @@ div:focus {
   }
 }
 
+pre {
+  margin: 0;
+}
+
 code {
-  padding: 12px;
+  padding: 12px !important;
   border-radius: 3px;
   position: relative;
   display: block;
   font-size: 12px;
   font-weight: 400;
   overflow-x: auto;
-  line-height: 1.45;
+  line-height: 20px !important;
   word-break: break-all;
   white-space: pre-wrap;
   color: rgba(0, 0, 0, .85);
-  background-color: rgb(246, 248, 250);
+  background-color: rgb(246, 248, 250) !important;
   font-family: sfmono-regular, Consolas, liberation mono, Menlo, Courier, monospace;
 
   &.light {
