feat: LAYOUT 一大波更新

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,8 +1,8 @@
-@import 'src/styles/variables';
-@import 'src/styles/mixin';
-@import 'src/styles/transition';
-@import 'src/styles/element-ui';
-@import 'src/styles/tap';
+@import 'variables';
+@import 'mixin';
+@import 'transition';
+@import 'element-ui';
+@import 'tap';
 
 body {
   height: 100%;
